Assignment3/Solution/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> VOID MAIN LPAREN RPAREN body
Rule 2     body -> LCURLY stmt_list RCURLY
Rule 3     body -> LCURLY RCURLY
Rule 4     stmt_list -> stmt stmt_list
Rule 5     stmt_list -> stmt
Rule 6     stmt -> matched_stmt
Rule 7     stmt -> unmatched_stmt
Rule 8     matched_stmt -> assign
Rule 9     matched_stmt -> declaration
Rule 10    matched_stmt -> matched_decision
Rule 11    matched_stmt -> loop
Rule 12    unmatched_stmt -> unmatched_decision
Rule 13    assign -> L1 EQUALS R1 SEMICOLON
Rule 14    assign -> L2 EQUALS R2 SEMICOLON
Rule 15    L1 -> NAME
Rule 16    R1 -> R1 PLUS ALLNUM
Rule 17    R1 -> R1 MINUS ALLNUM
Rule 18    R1 -> R1 STAR ALLNUM
Rule 19    R1 -> R1 DIVIDE ALLNUM
Rule 20    R1 -> ALLNUM PLUS R1
Rule 21    R1 -> ALLNUM MINUS R1
Rule 22    R1 -> ALLNUM STAR R1
Rule 23    R1 -> ALLNUM DIVIDE R1
Rule 24    R1 -> R1 PLUS R1
Rule 25    R1 -> R1 MINUS R1
Rule 26    R1 -> R1 STAR R1
Rule 27    R1 -> R1 DIVIDE R1
Rule 28    R1 -> LPAREN R1 RPAREN
Rule 29    R1 -> MINUS R1
Rule 30    R1 -> PName
Rule 31    R1 -> NAME
Rule 32    ALLNUM -> NUMBER
Rule 33    L2 -> STAR NAME
Rule 34    L2 -> STAR PName
Rule 35    R2 -> R2 PLUS R2
Rule 36    R2 -> R2 MINUS R2
Rule 37    R2 -> R2 STAR R2
Rule 38    R2 -> R2 DIVIDE R2
Rule 39    R2 -> LPAREN R2 RPAREN
Rule 40    R2 -> MINUS R2
Rule 41    R2 -> PName
Rule 42    R2 -> NUMBER
Rule 43    R2 -> NAME
Rule 44    PName -> STAR PName
Rule 45    PName -> AMPERSAND PName
Rule 46    PName -> STAR NAME
Rule 47    PName -> AMPERSAND NAME
Rule 48    declaration -> INT varlist SEMICOLON
Rule 49    varlist -> var COMMA varlist
Rule 50    varlist -> var
Rule 51    var -> STAR var
Rule 52    var -> NAME
Rule 53    loop -> WHILE LPAREN condition RPAREN body
Rule 54    condition -> condition AND condition
Rule 55    condition -> condition OR condition
Rule 56    condition -> LPAREN condition RPAREN
Rule 57    condition -> NOT condition
Rule 58    condition -> R2 GT R2
Rule 59    condition -> R2 LT R2
Rule 60    condition -> R2 GE R2
Rule 61    condition -> R2 LE R2
Rule 62    condition -> R2 EQ R2
Rule 63    condition -> R2 NE R2
Rule 64    matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
Rule 65    matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE body
Rule 66    matched_decision -> IF LPAREN condition RPAREN body ELSE matched_stmt
Rule 67    matched_decision -> IF LPAREN condition RPAREN body ELSE body
Rule 68    unmatched_decision -> IF LPAREN condition RPAREN stmt
Rule 69    unmatched_decision -> IF LPAREN condition RPAREN body
Rule 70    unmatched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
Rule 71    unmatched_decision -> IF LPAREN condition RPAREN body ELSE unmatched_stmt

Terminals, with rules where they appear

AMPERSAND            : 45 47
AND                  : 54
COMMA                : 49
DIVIDE               : 19 23 27 38
ELSE                 : 64 65 66 67 70 71
EQ                   : 62
EQUALS               : 13 14
GE                   : 60
GT                   : 58
IF                   : 64 65 66 67 68 69 70 71
INT                  : 48
LCURLY               : 2 3
LE                   : 61
LPAREN               : 1 28 39 53 56 64 65 66 67 68 69 70 71
LT                   : 59
MAIN                 : 1
MINUS                : 17 21 25 29 36 40
NAME                 : 15 31 33 43 46 47 52
NE                   : 63
NOT                  : 57
NUMBER               : 32 42
OR                   : 55
PLUS                 : 16 20 24 35
RCURLY               : 2 3
RPAREN               : 1 28 39 53 56 64 65 66 67 68 69 70 71
SEMICOLON            : 13 14 48
STAR                 : 18 22 26 33 34 37 44 46 51
VOID                 : 1
WHILE                : 53
error                : 

Nonterminals, with rules where they appear

ALLNUM               : 16 17 18 19 20 21 22 23
L1                   : 13
L2                   : 14
PName                : 30 34 41 44 45
R1                   : 13 16 17 18 19 20 21 22 23 24 24 25 25 26 26 27 27 28 29
R2                   : 14 35 35 36 36 37 37 38 38 39 40 58 58 59 59 60 60 61 61 62 62 63 63
assign               : 8
body                 : 1 53 65 66 67 67 69 71
condition            : 53 54 54 55 55 56 57 64 65 66 67 68 69 70 71
declaration          : 9
loop                 : 11
matched_decision     : 10
matched_stmt         : 6 64 64 65 66 70
program              : 0
stmt                 : 4 5 68
stmt_list            : 2 4
unmatched_decision   : 12
unmatched_stmt       : 7 70 71
var                  : 49 50 51
varlist              : 48 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . VOID MAIN LPAREN RPAREN body

    VOID            shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> VOID . MAIN LPAREN RPAREN body

    MAIN            shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> VOID MAIN . LPAREN RPAREN body

    LPAREN          shift and go to state 4


state 4

    (1) program -> VOID MAIN LPAREN . RPAREN body

    RPAREN          shift and go to state 5


state 5

    (1) program -> VOID MAIN LPAREN RPAREN . body
    (2) body -> . LCURLY stmt_list RCURLY
    (3) body -> . LCURLY RCURLY

    LCURLY          shift and go to state 6

    body                           shift and go to state 7

state 6

    (2) body -> LCURLY . stmt_list RCURLY
    (3) body -> LCURLY . RCURLY
    (4) stmt_list -> . stmt stmt_list
    (5) stmt_list -> . stmt
    (6) stmt -> . matched_stmt
    (7) stmt -> . unmatched_stmt
    (8) matched_stmt -> . assign
    (9) matched_stmt -> . declaration
    (10) matched_stmt -> . matched_decision
    (11) matched_stmt -> . loop
    (12) unmatched_stmt -> . unmatched_decision
    (13) assign -> . L1 EQUALS R1 SEMICOLON
    (14) assign -> . L2 EQUALS R2 SEMICOLON
    (48) declaration -> . INT varlist SEMICOLON
    (64) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (65) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE body
    (66) matched_decision -> . IF LPAREN condition RPAREN body ELSE matched_stmt
    (67) matched_decision -> . IF LPAREN condition RPAREN body ELSE body
    (53) loop -> . WHILE LPAREN condition RPAREN body
    (68) unmatched_decision -> . IF LPAREN condition RPAREN stmt
    (69) unmatched_decision -> . IF LPAREN condition RPAREN body
    (70) unmatched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (71) unmatched_decision -> . IF LPAREN condition RPAREN body ELSE unmatched_stmt
    (15) L1 -> . NAME
    (33) L2 -> . STAR NAME
    (34) L2 -> . STAR PName

    RCURLY          shift and go to state 16
    INT             shift and go to state 9
    IF              shift and go to state 22
    WHILE           shift and go to state 8
    NAME            shift and go to state 10
    STAR            shift and go to state 17

    L2                             shift and go to state 18
    stmt                           shift and go to state 13
    unmatched_stmt                 shift and go to state 19
    assign                         shift and go to state 20
    loop                           shift and go to state 24
    L1                             shift and go to state 12
    unmatched_decision             shift and go to state 21
    matched_stmt                   shift and go to state 23
    matched_decision               shift and go to state 11
    declaration                    shift and go to state 14
    stmt_list                      shift and go to state 15

state 7

    (1) program -> VOID MAIN LPAREN RPAREN body .

    $end            reduce using rule 1 (program -> VOID MAIN LPAREN RPAREN body .)


state 8

    (53) loop -> WHILE . LPAREN condition RPAREN body

    LPAREN          shift and go to state 25


state 9

    (48) declaration -> INT . varlist SEMICOLON
    (49) varlist -> . var COMMA varlist
    (50) varlist -> . var
    (51) var -> . STAR var
    (52) var -> . NAME

    STAR            shift and go to state 26
    NAME            shift and go to state 27

    var                            shift and go to state 28
    varlist                        shift and go to state 29

state 10

    (15) L1 -> NAME .

    EQUALS          reduce using rule 15 (L1 -> NAME .)


state 11

    (10) matched_stmt -> matched_decision .

    INT             reduce using rule 10 (matched_stmt -> matched_decision .)
    IF              reduce using rule 10 (matched_stmt -> matched_decision .)
    WHILE           reduce using rule 10 (matched_stmt -> matched_decision .)
    NAME            reduce using rule 10 (matched_stmt -> matched_decision .)
    STAR            reduce using rule 10 (matched_stmt -> matched_decision .)
    RCURLY          reduce using rule 10 (matched_stmt -> matched_decision .)
    ELSE            reduce using rule 10 (matched_stmt -> matched_decision .)


state 12

    (13) assign -> L1 . EQUALS R1 SEMICOLON

    EQUALS          shift and go to state 30


state 13

    (4) stmt_list -> stmt . stmt_list
    (5) stmt_list -> stmt .
    (4) stmt_list -> . stmt stmt_list
    (5) stmt_list -> . stmt
    (6) stmt -> . matched_stmt
    (7) stmt -> . unmatched_stmt
    (8) matched_stmt -> . assign
    (9) matched_stmt -> . declaration
    (10) matched_stmt -> . matched_decision
    (11) matched_stmt -> . loop
    (12) unmatched_stmt -> . unmatched_decision
    (13) assign -> . L1 EQUALS R1 SEMICOLON
    (14) assign -> . L2 EQUALS R2 SEMICOLON
    (48) declaration -> . INT varlist SEMICOLON
    (64) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (65) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE body
    (66) matched_decision -> . IF LPAREN condition RPAREN body ELSE matched_stmt
    (67) matched_decision -> . IF LPAREN condition RPAREN body ELSE body
    (53) loop -> . WHILE LPAREN condition RPAREN body
    (68) unmatched_decision -> . IF LPAREN condition RPAREN stmt
    (69) unmatched_decision -> . IF LPAREN condition RPAREN body
    (70) unmatched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (71) unmatched_decision -> . IF LPAREN condition RPAREN body ELSE unmatched_stmt
    (15) L1 -> . NAME
    (33) L2 -> . STAR NAME
    (34) L2 -> . STAR PName

    RCURLY          reduce using rule 5 (stmt_list -> stmt .)
    INT             shift and go to state 9
    IF              shift and go to state 22
    WHILE           shift and go to state 8
    NAME            shift and go to state 10
    STAR            shift and go to state 17

    L2                             shift and go to state 18
    stmt                           shift and go to state 13
    unmatched_stmt                 shift and go to state 19
    assign                         shift and go to state 20
    loop                           shift and go to state 24
    L1                             shift and go to state 12
    unmatched_decision             shift and go to state 21
    matched_stmt                   shift and go to state 23
    matched_decision               shift and go to state 11
    declaration                    shift and go to state 14
    stmt_list                      shift and go to state 31

state 14

    (9) matched_stmt -> declaration .

    INT             reduce using rule 9 (matched_stmt -> declaration .)
    IF              reduce using rule 9 (matched_stmt -> declaration .)
    WHILE           reduce using rule 9 (matched_stmt -> declaration .)
    NAME            reduce using rule 9 (matched_stmt -> declaration .)
    STAR            reduce using rule 9 (matched_stmt -> declaration .)
    RCURLY          reduce using rule 9 (matched_stmt -> declaration .)
    ELSE            reduce using rule 9 (matched_stmt -> declaration .)


state 15

    (2) body -> LCURLY stmt_list . RCURLY

    RCURLY          shift and go to state 32


state 16

    (3) body -> LCURLY RCURLY .

    ELSE            reduce using rule 3 (body -> LCURLY RCURLY .)
    INT             reduce using rule 3 (body -> LCURLY RCURLY .)
    IF              reduce using rule 3 (body -> LCURLY RCURLY .)
    WHILE           reduce using rule 3 (body -> LCURLY RCURLY .)
    NAME            reduce using rule 3 (body -> LCURLY RCURLY .)
    STAR            reduce using rule 3 (body -> LCURLY RCURLY .)
    RCURLY          reduce using rule 3 (body -> LCURLY RCURLY .)
    $end            reduce using rule 3 (body -> LCURLY RCURLY .)


state 17

    (33) L2 -> STAR . NAME
    (34) L2 -> STAR . PName
    (44) PName -> . STAR PName
    (45) PName -> . AMPERSAND PName
    (46) PName -> . STAR NAME
    (47) PName -> . AMPERSAND NAME

    NAME            shift and go to state 33
    STAR            shift and go to state 36
    AMPERSAND       shift and go to state 35

    PName                          shift and go to state 34

state 18

    (14) assign -> L2 . EQUALS R2 SEMICOLON

    EQUALS          shift and go to state 37


state 19

    (7) stmt -> unmatched_stmt .

    INT             reduce using rule 7 (stmt -> unmatched_stmt .)
    IF              reduce using rule 7 (stmt -> unmatched_stmt .)
    WHILE           reduce using rule 7 (stmt -> unmatched_stmt .)
    NAME            reduce using rule 7 (stmt -> unmatched_stmt .)
    STAR            reduce using rule 7 (stmt -> unmatched_stmt .)
    RCURLY          reduce using rule 7 (stmt -> unmatched_stmt .)


state 20

    (8) matched_stmt -> assign .

    INT             reduce using rule 8 (matched_stmt -> assign .)
    IF              reduce using rule 8 (matched_stmt -> assign .)
    WHILE           reduce using rule 8 (matched_stmt -> assign .)
    NAME            reduce using rule 8 (matched_stmt -> assign .)
    STAR            reduce using rule 8 (matched_stmt -> assign .)
    RCURLY          reduce using rule 8 (matched_stmt -> assign .)
    ELSE            reduce using rule 8 (matched_stmt -> assign .)


state 21

    (12) unmatched_stmt -> unmatched_decision .

    INT             reduce using rule 12 (unmatched_stmt -> unmatched_decision .)
    IF              reduce using rule 12 (unmatched_stmt -> unmatched_decision .)
    WHILE           reduce using rule 12 (unmatched_stmt -> unmatched_decision .)
    NAME            reduce using rule 12 (unmatched_stmt -> unmatched_decision .)
    STAR            reduce using rule 12 (unmatched_stmt -> unmatched_decision .)
    RCURLY          reduce using rule 12 (unmatched_stmt -> unmatched_decision .)


state 22

    (64) matched_decision -> IF . LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (65) matched_decision -> IF . LPAREN condition RPAREN matched_stmt ELSE body
    (66) matched_decision -> IF . LPAREN condition RPAREN body ELSE matched_stmt
    (67) matched_decision -> IF . LPAREN condition RPAREN body ELSE body
    (68) unmatched_decision -> IF . LPAREN condition RPAREN stmt
    (69) unmatched_decision -> IF . LPAREN condition RPAREN body
    (70) unmatched_decision -> IF . LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (71) unmatched_decision -> IF . LPAREN condition RPAREN body ELSE unmatched_stmt

    LPAREN          shift and go to state 38


state 23

    (6) stmt -> matched_stmt .

    INT             reduce using rule 6 (stmt -> matched_stmt .)
    IF              reduce using rule 6 (stmt -> matched_stmt .)
    WHILE           reduce using rule 6 (stmt -> matched_stmt .)
    NAME            reduce using rule 6 (stmt -> matched_stmt .)
    STAR            reduce using rule 6 (stmt -> matched_stmt .)
    RCURLY          reduce using rule 6 (stmt -> matched_stmt .)


state 24

    (11) matched_stmt -> loop .

    INT             reduce using rule 11 (matched_stmt -> loop .)
    IF              reduce using rule 11 (matched_stmt -> loop .)
    WHILE           reduce using rule 11 (matched_stmt -> loop .)
    NAME            reduce using rule 11 (matched_stmt -> loop .)
    STAR            reduce using rule 11 (matched_stmt -> loop .)
    RCURLY          reduce using rule 11 (matched_stmt -> loop .)
    ELSE            reduce using rule 11 (matched_stmt -> loop .)


state 25

    (53) loop -> WHILE LPAREN . condition RPAREN body
    (54) condition -> . condition AND condition
    (55) condition -> . condition OR condition
    (56) condition -> . LPAREN condition RPAREN
    (57) condition -> . NOT condition
    (58) condition -> . R2 GT R2
    (59) condition -> . R2 LT R2
    (60) condition -> . R2 GE R2
    (61) condition -> . R2 LE R2
    (62) condition -> . R2 EQ R2
    (63) condition -> . R2 NE R2
    (35) R2 -> . R2 PLUS R2
    (36) R2 -> . R2 MINUS R2
    (37) R2 -> . R2 STAR R2
    (38) R2 -> . R2 DIVIDE R2
    (39) R2 -> . LPAREN R2 RPAREN
    (40) R2 -> . MINUS R2
    (41) R2 -> . PName
    (42) R2 -> . NUMBER
    (43) R2 -> . NAME
    (44) PName -> . STAR PName
    (45) PName -> . AMPERSAND PName
    (46) PName -> . STAR NAME
    (47) PName -> . AMPERSAND NAME

    LPAREN          shift and go to state 44
    NOT             shift and go to state 43
    MINUS           shift and go to state 39
    NUMBER          shift and go to state 41
    NAME            shift and go to state 42
    STAR            shift and go to state 36
    AMPERSAND       shift and go to state 35

    PName                          shift and go to state 45
    condition                      shift and go to state 40
    R2                             shift and go to state 46

state 26

    (51) var -> STAR . var
    (51) var -> . STAR var
    (52) var -> . NAME

    STAR            shift and go to state 26
    NAME            shift and go to state 27

    var                            shift and go to state 47

state 27

    (52) var -> NAME .

    COMMA           reduce using rule 52 (var -> NAME .)
    SEMICOLON       reduce using rule 52 (var -> NAME .)


state 28

    (49) varlist -> var . COMMA varlist
    (50) varlist -> var .

    COMMA           shift and go to state 48
    SEMICOLON       reduce using rule 50 (varlist -> var .)


state 29

    (48) declaration -> INT varlist . SEMICOLON

    SEMICOLON       shift and go to state 49


state 30

    (13) assign -> L1 EQUALS . R1 SEMICOLON
    (16) R1 -> . R1 PLUS ALLNUM
    (17) R1 -> . R1 MINUS ALLNUM
    (18) R1 -> . R1 STAR ALLNUM
    (19) R1 -> . R1 DIVIDE ALLNUM
    (20) R1 -> . ALLNUM PLUS R1
    (21) R1 -> . ALLNUM MINUS R1
    (22) R1 -> . ALLNUM STAR R1
    (23) R1 -> . ALLNUM DIVIDE R1
    (24) R1 -> . R1 PLUS R1
    (25) R1 -> . R1 MINUS R1
    (26) R1 -> . R1 STAR R1
    (27) R1 -> . R1 DIVIDE R1
    (28) R1 -> . LPAREN R1 RPAREN
    (29) R1 -> . MINUS R1
    (30) R1 -> . PName
    (31) R1 -> . NAME
    (32) ALLNUM -> . NUMBER
    (44) PName -> . STAR PName
    (45) PName -> . AMPERSAND PName
    (46) PName -> . STAR NAME
    (47) PName -> . AMPERSAND NAME

    LPAREN          shift and go to state 56
    MINUS           shift and go to state 51
    NAME            shift and go to state 54
    NUMBER          shift and go to state 52
    STAR            shift and go to state 36
    AMPERSAND       shift and go to state 35

    PName                          shift and go to state 50
    R1                             shift and go to state 55
    ALLNUM                         shift and go to state 53

state 31

    (4) stmt_list -> stmt stmt_list .

    RCURLY          reduce using rule 4 (stmt_list -> stmt stmt_list .)


state 32

    (2) body -> LCURLY stmt_list RCURLY .

    ELSE            reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    INT             reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    IF              reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    WHILE           reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    NAME            reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    STAR            reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    RCURLY          reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)
    $end            reduce using rule 2 (body -> LCURLY stmt_list RCURLY .)


state 33

    (33) L2 -> STAR NAME .

    EQUALS          reduce using rule 33 (L2 -> STAR NAME .)


state 34

    (34) L2 -> STAR PName .

    EQUALS          reduce using rule 34 (L2 -> STAR PName .)


state 35

    (45) PName -> AMPERSAND . PName
    (47) PName -> AMPERSAND . NAME
    (44) PName -> . STAR PName
    (45) PName -> . AMPERSAND PName
    (46) PName -> . STAR NAME
    (47) PName -> . AMPERSAND NAME

    NAME            shift and go to state 57
    STAR            shift and go to state 36
    AMPERSAND       shift and go to state 35

    PName                          shift and go to state 58

state 36

    (44) PName -> STAR . PName
    (46) PName -> STAR . NAME
    (44) PName -> . STAR PName
    (45) PName -> . AMPERSAND PName
    (46) PName -> . STAR NAME
    (47) PName -> . AMPERSAND NAME

    NAME            shift and go to state 59
    STAR            shift and go to state 36
    AMPERSAND       shift and go to state 35

    PName                          shift and go to state 60

state 37

    (14) assign -> L2 EQUALS . R2 SEMICOLON
    (35) R2 -> . R2 PLUS R2
    (36) R2 -> . R2 MINUS R2
    (37) R2 -> . R2 STAR R2
    (38) R2 -> . R2 DIVIDE R2
    (39) R2 -> . LPAREN R2 RPAREN
    (40) R2 -> . MINUS R2
    (41) R2 -> . PName
    (42) R2 -> . NUMBER
    (43) R2 -> . NAME
    (44) PName -> . STAR PName
    (45) PName -> . AMPERSAND PName
    (46) PName -> . STAR NAME
    (47) PName -> . AMPERSAND NAME

    LPAREN          shift and go to state 61
    MINUS           shift and go to state 39
    NUMBER          shift and go to state 41
    NAME            shift and go to state 42
    STAR            shift and go to state 36
    AMPERSAND       shift and go to state 35

    PName                          shift and go to state 45
    R2                             shift and go to state 62

state 38
